; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_debug.c_putpacket.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libdb/extr_debug.c_putpacket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@putpacket.outbuf = internal global [2048 x i8] zeroinitializer, align 16
@hexchars = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @putpacket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @putpacket(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  br label %8

8:                                                ; preds = %50, %1
  %9 = load i8*, i8** %2, align 8
  store i8* %9, i8** %7, align 8
  store i8* getelementptr inbounds ([2048 x i8], [2048 x i8]* @putpacket.outbuf, i64 0, i64 0), i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = getelementptr inbounds i8, i8* %10, i32 1
  store i8* %11, i8** %6, align 8
  store i8 36, i8* %10, align 1
  store i32 0, i32* %4, align 4
  br label %12

12:                                               ; preds = %18, %8
  %13 = load i8*, i8** %7, align 8
  %14 = getelementptr inbounds i8, i8* %13, i32 1
  store i8* %14, i8** %7, align 8
  %15 = load i8, i8* %13, align 1
  %16 = sext i8 %15 to i32
  store i32 %16, i32* %5, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %26

18:                                               ; preds = %12
  %19 = load i32, i32* %5, align 4
  %20 = trunc i32 %19 to i8
  %21 = load i8*, i8** %6, align 8
  %22 = getelementptr inbounds i8, i8* %21, i32 1
  store i8* %22, i8** %6, align 8
  store i8 %20, i8* %21, align 1
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %4, align 4
  %25 = add nsw i32 %24, %23
  store i32 %25, i32* %4, align 4
  br label %12

26:                                               ; preds = %12
  %27 = load i8*, i8** %6, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 1
  store i8* %28, i8** %6, align 8
  store i8 35, i8* %27, align 1
  %29 = load i8**, i8*** @hexchars, align 8
  %30 = load i32, i32* %4, align 4
  %31 = ashr i32 %30, 4
  %32 = sext i32 %31 to i64
  %33 = getelementptr inbounds i8*, i8** %29, i64 %32
  %34 = load i8*, i8** %33, align 8
  %35 = ptrtoint i8* %34 to i8
  %36 = load i8*, i8** %6, align 8
  %37 = getelementptr inbounds i8, i8* %36, i32 1
  store i8* %37, i8** %6, align 8
  store i8 %35, i8* %36, align 1
  %38 = load i8**, i8*** @hexchars, align 8
  %39 = load i32, i32* %4, align 4
  %40 = and i32 %39, 15
  %41 = sext i32 %40 to i64
  %42 = getelementptr inbounds i8*, i8** %38, i64 %41
  %43 = load i8*, i8** %42, align 8
  %44 = ptrtoint i8* %43 to i8
  %45 = load i8*, i8** %6, align 8
  %46 = getelementptr inbounds i8, i8* %45, i32 1
  store i8* %46, i8** %6, align 8
  store i8 %44, i8* %45, align 1
  %47 = load i8*, i8** %6, align 8
  store i8 0, i8* %47, align 1
  %48 = call i32 @putdbgstr(i8* getelementptr inbounds ([2048 x i8], [2048 x i8]* @putpacket.outbuf, i64 0, i64 0))
  %49 = call i32 (...) @getdbgchar()
  store i32 %49, i32* %3, align 4
  br label %50

50:                                               ; preds = %26
  %51 = load i32, i32* %3, align 4
  %52 = and i32 %51, 127
  %53 = icmp ne i32 %52, 43
  br i1 %53, label %8, label %54

54:                                               ; preds = %50
  ret void
}

declare dso_local i32 @putdbgstr(i8*) #1

declare dso_local i32 @getdbgchar(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
